# The-Player

./: .gitattributes  .gitignore  claude.md  index.html  package-lock.json  package.json  vite.config.js
.claude/: MARKETING-BRIEF.md  settings.json
.claude/agents/: audio-engine.md  dev.md  reviewer.md
.github/workflows/: build.yml
docs/: motor-natiu-asio.md
src/: App.css  App.jsx  main.jsx
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: asio_names.rs
src-tauri/icons/: icon.icns
src-tauri/src/: asio_decode.rs  asio_stream.rs  lib.rs  native_output.rs
src/components/: CueTransport.jsx  Library.jsx  NativeDiagnostic.jsx  Playlist.jsx  PlaylistActionToggle.jsx  PlaylistSave.jsx  SettingsModal.jsx  SlotEditor.jsx  SoundBoard.jsx  SoundButton.jsx  VideoOutput.css  VideoOutput.jsx  VideoTestPatterns.jsx  VuMeter.jsx  Waveform.jsx
src/hooks/: useAudioEngine.js  useLibrary.js  usePlaybackTime.js  usePlaylistLibrary.js
src/lib/: asioIds.js  asioTelemetry.js  colors.js  cueDispatch.js  cueStreamEngine.js  keyMap.js  outputTarget.js  peakCache.js  playlistAsio.js  playlistEngine.js  playlistNative.js  playlistSeq.js  resizeObserver.js  slotAudio.js  videoOutput.js  videoThumb.js  waveformDraw.js  waveformPeaks.js
src/store/: useSoundStore.js
