[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
# Només "rlib" per a desktop: el binari de l'app enllaça aquesta lib.
# Els tipus "staticlib"/"cdylib" només calen per a mòbil (iOS/Android) i,
# amb el toolchain GNU a Windows, el cdylib provoca "export ordinal too large".
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# ASIO és la feature PER DEFECTE: el motor natiu ASIO ja és funcional i forma part
# del producte. Requereix l'ASIO SDK de Steinberg + LLVM/clang i el toolchain MSVC
# (no funciona amb GNU/MinGW). `npm run tauri dev` i `cargo build` ja la inclouen.
# Per a un build sense ASIO (p. ex. depurar sense l'SDK), passa --no-default-features.
[features]
default = ["asio"]
asio = ["cpal/asio", "dep:asio-sys", "dep:symphonia"]

# Optimitza les DEPENDÈNCIES també en build de debug (el nostre codi segueix sense
# optimitzar, per compilar ràpid i poder depurar). Imprescindible per a l'àudio:
# el descodificador MP3 de symphonia és ~30-100× més lent sense optimitzar
# (descodificar 2 min trigava 30 s en debug; amb això, <1 s). Es compila un cop
# i queda a la caché.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
# Accés directe a l'API ASIO de baix nivell (mateixa versió que usa cpal). Ens
# cal per llistar els drivers SENSE carregar-los (driver_names) i per carregar
# NOMÉS el driver triat (load_driver) — cpal no exposa cap d'aquestes dues coses.
asio-sys = { version = "0.2", optional = true }
# Descodificació d'àudio a Rust per al render natiu de cues (motor ASIO). Activem
# només els formats del projecte (MP3/WAV/OGG-Vorbis/FLAC) per no inflar el build.
# `optional` + lligat a la feature `asio`: el build normal (Web Audio) no el porta.
symphonia = { version = "0.5", optional = true, default-features = false, features = [
    "mp3", "wav", "ogg", "vorbis", "flac", "pcm", "isomp4",
] }

